--- a/lab_webapp/pubspec.yaml
+++ b/lab_webapp/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: any
   google_sign_in: ^4.0.4
 
   # The following adds the Cupertino Icons font to your application.
